mongo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-namespace
  labels:
    app: mongo-namespace
